--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/Genr8or/Genr8or#readme",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "npm": "^6.4.1",
     "truffle": "^4.1.14",
+    "truffle-hdwallet-provider": "0.0.6",
     "zeppelin-solidity": "^1.12.0"
   },
   "devDependencies": {
